[FEAT] Move getAll challenges to new API
