# src/models/result.js
@@ -1,34 +1,51 @@
 const mongoose = require('mongoose');
 
-const Schema = mongoose.Schema;
+const Schema = require('./schema');
 
 const ResultSchema = new Schema({
-  cip: { type: String },
-  challenge: { type: String },
-  percent: { type: Number },
-  points: { type: Number },
-  results: [{
-    name: { type: String },
+  user: {
+    type: Schema.Types.ObjectId,
+    ref: 'User'
+  },
+  challenge: {
+    type: Schema.Types.ObjectId,
+    ref: 'Challenge'
+  },
+  points: {
+    type: Number,
+    required: true
+  },
+  percent: {
+    type: Number,
+    required: true
+  },
+  tests: [{
+    _id: false,
+    test: {
+      type: Schema.Types.ObjectId,
+      ref: 'Test'
+    },
+    percent: { type: Number },
     isSuccess: { type: Boolean },
     isTimeout: { type: Boolean },
     isCompilationError: { type: Boolean }
   }]
-}, {
-  toObject: { virtuals: true }
 });
 
-ResultSchema.index({ cip: 1, challenge: 1 }, { unique: true });
-
-ResultSchema.virtual('created').get(function () {
-  return this._id.getTimestamp();
-});
+ResultSchema.index({ user: 1, challenge: 1 }, { unique: true });
 
 ResultSchema.statics.getUsersPoints = function () {
-  return this.aggregate([{ $group: { _id: '$cip', points: { $sum: '$points' } } }, { $sort: { points: -1 } }]);
+  return this.aggregate().group([{
+    $group: {
+      _id: '$user',
+      points: { $sum: '$points' } }
+  }, {
+    $sort: { points: -1 }
+  }]);
 };
 
 ResultSchema.statics.save = function (result) {
-  return this.update({ cip: result.cip, challenge: result.challenge }, result, { upsert: true });
+  return this.update({ user: result.user, challenge: result.challenge }, result, { upsert: true });
 };
 
 module.exports = mongoose.model('Result', ResultSchema);
